# zipmanip

./: .pre-commit-config.yaml  CHANGES.md  README.md  noxfile.py  pyproject.toml  zipmanip.py
.github/workflows/: ci.yml
tests/: test_zipmanip.py
