[project]
name = "zipmanip"
version = "0.1.0a2"
description = "Rewrite zip files, modifying compression type and parameters."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jeff Dairiki", email = "dairiki@dairiki.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/dairiki/zipmanip"

[project.scripts]
zipmanip = "zipmanip:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "typing"},
    {include-group = "style"},
    "nox>=2026.2.9",
]
tests = [
    "pytest>=8.3.4",
]
typing = [
    "mypy>=1.15.0",
]
style = [
    "ruff>=0.9.6",
]


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["zipmanip.py"]

[tool.pdm.scripts]
tests = "nox"


################################################################
#
# mypy
#
[tool.mypy]
files = [
    "$MYPY_CONFIG_FILE_DIR/zipmanip.py",
]

show_error_codes = true
error_summary = true
warn_unused_configs = true
warn_unused_ignores = true
strict = true

################################################################
#
# ruff
#
[tool.ruff]
extend-exclude = [".pdm-build"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",                   # (conflicts with `ruff format`)
    "ISC001",                   # (conflicts with `ruff format`)
    "D",                        # pydocstyle
    #"S",                        # flake8-bandit
    "S101",                     # flake8-bandit: use of assert detected
    "PTH",                      # flake8-use-pathlib
]

[tool.ruff.lint.flake8-unused-arguments]
# ignore-variadic-names = true

[tool.scriv]
format = "md"
fragment_directory = "changes.d"
new_fragment_template = "file: new_fragment.md.j2"
output_file = "CHANGES.md"
md_header_level = "3"
version = "command: pdm show --version"
entry_title_template = "file: entry_title.txt.j2"
